Introduce pairing side support for BoundaryLine and tie line merging
Signed-off-by: Leclerc Clement <clement.leclerc@rte-france.com>